bunch of responsiveness fixes; mobile look is finally looking decent even on iphone X

--- a/css/home.css
+++ b/css/home.css
@@ -62,6 +62,10 @@ nav ul li {
     padding: 1.3rem;
     float: left;  /* reverse back to normal */
 }
+nav ul li:hover{
+    background-color: rgb(240, 239, 239);
+    border-radius: 2rem;
+}
 nav img {
     position: absolute;
     left: 40px;
@@ -165,13 +169,18 @@ nav ion-icon:hover {
     margin: auto;
 }
 .who-are-we h2 {
-    margin-bottom: 3%;
+    margin-bottom: 1%;
     text-align: center;
 }
 .who-are-we p {
     text-align: justify;
     text-align-last: center;  /* center the last line */
     margin: 1rem 4rem;
+}
+@media screen and (max-width: 400px) {
+    .who-are-we p {
+        text-align: center;
+    }
 }
 
 /* resources */
@@ -190,33 +199,53 @@ nav ion-icon:hover {
 }
 
 #resources p {
-    padding: 2rem 4rem;
+    padding: 2rem;
 }
 
 #resources .card-container {
     margin: auto;
     height: 50vh;
-    width: 95%;
     display: flex;
     justify-content: space-evenly;
-    min-width: 120rem;
 }
 
-#resources .card-container .card {
+#resources .card {
     height: 80%;
-    width: 90%;
     border: darkgray;
     width: 25rem;
     text-align: center;
     flex-wrap: wrap;
-    min-height: 40vh;
-    margin: 1rem 3rem;
+    margin: 1rem;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1), 0px 20px 20px rgba(0, 0, 0, 0.1);
 }
 
-#resources .card-container .card .card-icon {
+#resources .card-icon {
     height: 13%;
     background:rgb(121, 0, 60);
+    position: sticky;   /* don't scroll the banner */
+    top:0
+}
+
+@media screen and (max-width: 900px) {
+    #resources h4 {
+        padding-top: 1rem;
+    }
+    #resources p {
+        padding: 0.5rem;
+    }
+    #resources .card-container {
+        display: list-item;
+        height: max-content;  /* adjust for content */
+        padding-bottom: 2rem;
+    }
+    #resources .card {
+        margin: auto;
+        width: 95%;
+        height: min-content;
+    }
+    #resources .card-icon {
+        height: 0.5rem;
+    }
 }
 
 /* events */
@@ -259,6 +288,9 @@ nav ion-icon:hover {
         font-size: 1.5rem;
         padding: 2%;
         font-size: small;
+      }
+      #events {
+        padding: 2.5rem 1rem;
       }
 }
 
@@ -319,6 +351,11 @@ ion-icon {
 }
 .footer-maroon p {
     padding-left: 7rem;
+}
+@media screen and (max-width: 550px) {
+    .footer-maroon p {
+        padding-left: 2rem;
+    }
 }
 
 /* scroll to the top icon */
